# pynn

./: .gitignore  .tasks  README.md  pyproject.toml  setup.py
src/: main.py
src/pynn/: __init__.py  core.c  core.pxd  core.pyx  gradfunc.c  gradfunc.pxd  gradfunc.pyx  loss.c  loss.pyx  math.c  math.pyx  nn.c  nn.pxd  nn.pyx
