[project]
name = "pynn"
version = "0.1.0"
description = "simple nn"
authors = [
    {name = "kewuaa"}
]
dependencies = ["numpy"]
readme = "README.md"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["./src"]

[tool.setuptools.package-dir]
"" = "./src"

[tool.setuptools.package-data]
pynn = ["*.c"]

[tool.setuptools.exclude-package-data]
pynn = ["*.c"]

[tool.pyright]
venv = 'ai'
